# openrave_rawxml

./: CMakeLists.txt  compile.sh  license.txt  openrave_rawxml.cpp  parsexml.cpp  readme.md  test_rawxml.py
